RESOLVED FIXED 33795
[v8] [Android] V8 bindings for touch events are missing.
https://bugs.webkit.org/show_bug.cgi?id=33795
Summary [v8] [Android] V8 bindings for touch events are missing.
Ben Murdoch
Reported 2010-01-18 05:51:12 PST
There are currently no V8 bindings upstream for touch events. Patch to follow shortly.
Attachments
Patch. (5.31 KB, patch)
2010-02-17 05:07 PST, Ben Murdoch
japhet: review+
benm: commit-queue-
Ben Murdoch
Comment 1 2010-02-17 05:07:13 PST
Nate Chapin
Comment 2 2010-02-17 10:46:23 PST
Comment on attachment 48895 [details] Patch. Looks good. Ignorant question: Does this patch require changes to the Android build files?
Ben Murdoch
Comment 3 2010-02-17 10:57:31 PST
(In reply to comment #2) > (From update of attachment 48895 [details]) > Looks good. > > Ignorant question: Does this patch require changes to the Android build files? Ah, I thought these were already in the upstream version of our makefile. Turns out they are not. I can amend the Android makefiles and land this patch without another review, or would you like me to send another patch? Thanks, Ben
Ben Murdoch
Comment 4 2010-02-18 02:22:01 PST
Comment on attachment 48895 [details] Patch. Landed as r54950, closing bug.
Note You need to log in before you can comment on or make changes to this bug.