WebCore/bindings/v8/custom/V8EventCustom.cpp
@@ -51,6 +51,7 @@
 #include "V8SVGZoomEvent.h"
 #include "V8StorageEvent.h"
 #include "V8TextEvent.h"
+#include "V8TouchEvent.h"
 #include "V8UIEvent.h"
 #include "V8WebKitAnimationEvent.h"
 #include "V8WebKitTransitionEvent.h"
@@ -104,6 +105,10 @@ v8::Handle<v8::Value> toV8(Event* impl)
 #endif
         if (impl->isCompositionEvent())
             return toV8(static_cast<CompositionEvent*>(impl));
+#if ENABLE(TOUCH_EVENTS)
+        if (impl->isTouchEvent())
+            return toV8(static_cast<TouchEvent*>(impl));
+#endif
         return toV8(static_cast<UIEvent*>(impl));
     }
     if (impl->isMutationEvent())
